fixed dark mode issue

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -59,8 +59,9 @@ footer{
     color:#0e0e0e;
 }
 
-div.main-container.dark{
-    color:white !important;
+.main-container.dark{
+    --font-color: #f2f2f2;
+    --background-color: #0e0e0e;
 }
 
 @media only screen and (max-width: 1250px) {
